syntax = "proto3";

package proto;

message ControllerInfo{
  string portName = 1;
}

message ControllerListRequest {}

message ControllerListResponse{
  repeated ControllerInfo controller_infos = 1;
}

message ReadControllerOutputRequest {
  string controller_port_name = 1;
}

message ReadControllerOutputResponse{
  string output = 1;
}


service NervoService {
  rpc ListControllers(ControllerListRequest) returns (ControllerListResponse);
  rpc ReadControllerOutput(ReadControllerOutputRequest) returns (ReadControllerOutputResponse);
}
